[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simtag"
version = "0.1.0"
authors = [
  { name="Yibie", email="your@email.com" },
]
description = "Python backend for org-supertag"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yibie/org-supertag"

[tool.setuptools.packages.find]
where = ["."]
include = ["simtag*"]
exclude = ["test*"] 